[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "widgets_pagination_view"
version = "1.1.2"
dependencies = [
    "PySide6"
]
requires-python = ">=3.11"
authors = [
  {name = "SoloEnder", email = "SoloEnder@proton.me"},
]
description = "A lib that let you organise a list of Pyside6.QtWidgets.QWigdet in a pagination view"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E"]
keywords = ["Pyside6", "QtWidgets", "Layout", "Page"]
classifiers = [
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/SoloEnder/widgets_pagination_view"
Repository = "https://github.com/SoloEnder/widgets_pagination_view"
Issues = "https://github.com/SoloEnder/widgets_pagination_view/issues"
